yamls/ingress/nginx/normal-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.org/rewrites: "serviceName=normal-service rewrite=/"
spec:
  rules:
  - host: xxx.yyy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: normal-service
          servicePort: 80
      - path: /test/
        backend:
          serviceName: normal-service
          servicePort: 80
